last-changes-after-merged

--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@
 
 			YANI GIT REVERT -HASHIDNUMBER- BU COMMIT HANGISI ISE BU COMMITTI SILIP HEMEN ONCEKI COMMITI BIZE HEAD  YAPIYOR ONU BIZE GETIRIYOR..
 			AMA GIT HARD HASH-COMMIT-ID ISE BU COMMIT HANGISI ISE O COMMIT I SILMIYOR BU COMMMITI BIZE HEAD OLARAK YANI BIZE BU COMMIT IN DEGISIKLIKLERINI GETIRIYOR
+
+			SIMDI GELELIM..PROBLEMLERIMIZDEN BIRININ COZUMUNE!!!!! 
+			ORNEGIN BIZ BELLI DEGISIKLIKLER  YAPTIK GIT ADD- GIT COMMIT YAPTIK SONRA GIT PULL YAPTIK VE TAKIM ARKADASIMIZ ILE AYNI SATIRLARDA YAPTGIMIZ DEGISIKLILERDEN DOLAYI MERGE YAPMAMIZ GEREKTI VE MERGE YAPTIK SONRA GIT ADD VE GIT COMMIT  YAPMAK GEREKIYOR TEKRAR VE TAM GIT PUSH YAPACAKKKEN FARKETTIK KI GIT MERGE U YANLIS YAPMISIZ...O ZAMAN NE YAPACAGIZ EVET BOYLE DURUMLARDA 
+			1-ONCE LIKLE GIT REVERT ILE EN SON  YAPILAN DEGISIKLIKLIGI BIR GERI ALIRIZ ONCE YANI MERGE DEGISIKLIGIINI GERI ALIRIZ
 	-->
 </body>
 </html>
