--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
 			SIMDI GELELIM..PROBLEMLERIMIZDEN BIRININ COZUMUNE!!!!! 
 			ORNEGIN BIZ BELLI DEGISIKLIKLER  YAPTIK GIT ADD- GIT COMMIT YAPTIK SONRA GIT PULL YAPTIK VE TAKIM ARKADASIMIZ ILE AYNI SATIRLARDA YAPTGIMIZ DEGISIKLILERDEN DOLAYI MERGE YAPMAMIZ GEREKTI VE MERGE YAPTIK SONRA GIT ADD VE GIT COMMIT  YAPMAK GEREKIYOR TEKRAR VE TAM GIT PUSH YAPACAKKKEN FARKETTIK KI GIT MERGE U YANLIS YAPMISIZ...O ZAMAN NE YAPACAGIZ EVET BOYLE DURUMLARDA 
 			1-ONCE LIKLE GIT REVERT ILE EN SON  YAPILAN DEGISIKLIKLIGI BIR GERI ALIRIZ ONCE YANI MERGE DEGISIKLIGIINI GERI ALIRIZ
+			BU SENARYOYOU UYGULAMALI  BIR SEKILDE COZELIM!!!!!!!!!!!!!
+			2- SONRA DA DAHA ONCE KI DEGISIKLIKTE EGER BIZ TAMAMEN UZAK REPODAN GELEN DEGISIKLIKLERI KABUL EDEREK MERGE ETMIS ISEK O MERGE COMMIT I DE HISTORY DE OLDUGU ICIN, GIDIP ONU DE TEKRARDAN REVERT EDERSEK ZATEN AYNI  MERGE I BIR KEZ DAHA YAPMA FIRSATINI BULMUS OLLURUZ KI SORUNU COZMUS OLUYOR BU 
+			ANCAK ASIL PROBLEM ISE SU SENARYO DA BU NU COZMEK COK ONEMLI
+			ORNEGIN BIZ MERGE Y APARKEN TAMAMEN KENDI DEGISIKLIKLERIMIZ I KABUL ETTIK VE UZAK REPODAN ARKADASIMIZDAN GELEN HICBIR DEGISIKLIGII KABUL ETMEDIK DIYELIM KI..VE DE SONRA MERGE YAPTIK BU SEKILDE VE GIT ADD- GIT COMMIT YAPTIK MERGING I VE HEMEN SONRA FARKETTIK KI UZAK REPODAN GELEN DEGISIKLIKLERDEN DE BIR KISMINI KULLANACAK MISIZ...BIZ AMA ALMAMISIZ ISTE BU SENARYO DA NASIL BIZ UZAK REPODAN GELEN DEGISIKLIKLERE TEKRAR ERISECEGIZ CUNKU BIZ BIR DAHA GIT PULL YAPTIGIMZDA UZAK REPO DEGISIKLILERI DAHA ONCE BIZIM TARAIFMIZDAN PULL EDILDIGI ICIN TEKRARDAN AYNI DEGIISKLIKLERI PULL ETMIYOR...VE DAHA DA KOTUSU BIZ PUSH EDERSEK ORDAKI DEGISIKLIKLERI DE SILIP BIZIM DEGSIKLIKLERI UZERINE YAZIYOR....O ZAMAN KENDI LOKALIMZDE IS ARKADASIMIZIN CALISTIGI BIR SURU KODU, ALMADIGMZ GIBI BU SEFER ANA UZAK PROJEDE DE ARKADASIN KODLARININ UZERINE YAZARAK ONUN DEGISIKLIKERLINI DE BIR NEVI SILMIS OLYORUZ...BU ISTE TEHLIKELI BIRSEY TAKIM ARKADASMIZA BIZ EKSTRA MESAI CIKARMIS OLURUZ CUNKU IS BIRAZ BIZDEN CIKMIS OLUYOR....BOYLE BIR SEYLE KARSILASIRSAM NASIL COZERIM BUNU DUSUNELIM....BU COOOOK ONEMLI....
 	-->
 </body>
 </html>
