--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 		BU KOMUT ILE MERGE ISLEMININ HEMEN ONCESINE GIDIYOR, DONUYOR....DIKKKAT EDELIM...COOOK ONEMLI!
 
 		SONRASINDA TEKRARDAN MERGE ETMEYE CALISABLIRIZ...
-
+asdfa
 
 	-->
 </body>
